; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_returntuple.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_returntuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64, i64 }

@SPI_ERROR_ARGUMENT = common dso_local global i32 0, align 4
@SPI_result = common dso_local global i32 0, align 4
@_SPI_current = common dso_local global %struct.TYPE_7__* null, align 8
@SPI_ERROR_UNCONNECTED = common dso_local global i32 0, align 4
@RECORDOID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @SPI_returntuple(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = icmp eq %struct.TYPE_6__* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %2
  %14 = load i32, i32* @SPI_ERROR_ARGUMENT, align 4
  store i32 %14, i32* @SPI_result, align 4
  store i32* null, i32** %3, align 8
  br label %46

15:                                               ; preds = %10
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** @_SPI_current, align 8
  %17 = icmp eq %struct.TYPE_7__* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %15
  %19 = load i32, i32* @SPI_ERROR_UNCONNECTED, align 4
  store i32 %19, i32* @SPI_result, align 4
  store i32* null, i32** %3, align 8
  br label %46

20:                                               ; preds = %15
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @RECORDOID, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %20
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp slt i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %26
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %33 = call i32 @assign_record_type_typmod(%struct.TYPE_6__* %32)
  br label %34

34:                                               ; preds = %31, %26, %20
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** @_SPI_current, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @MemoryContextSwitchTo(i32 %37)
  store i32 %38, i32* %6, align 4
  %39 = load i32*, i32** %4, align 8
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %41 = call i32 @heap_copy_tuple_as_datum(i32* %39, %struct.TYPE_6__* %40)
  %42 = call i32* @DatumGetHeapTupleHeader(i32 %41)
  store i32* %42, i32** %7, align 8
  %43 = load i32, i32* %6, align 4
  %44 = call i32 @MemoryContextSwitchTo(i32 %43)
  %45 = load i32*, i32** %7, align 8
  store i32* %45, i32** %3, align 8
  br label %46

46:                                               ; preds = %34, %18, %13
  %47 = load i32*, i32** %3, align 8
  ret i32* %47
}

declare dso_local i32 @assign_record_type_typmod(%struct.TYPE_6__*) #1

declare dso_local i32 @MemoryContextSwitchTo(i32) #1

declare dso_local i32* @DatumGetHeapTupleHeader(i32) #1

declare dso_local i32 @heap_copy_tuple_as_datum(i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
